--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # لا حاجة لـ setup-java، لأن action البناء سيتولى الأمر
-      # - name: Set up JDK 17
-      #   uses: actions/setup-java@v4
-      #   with:
-      #     java-version: '17'
-      #     distribution: 'temurin'
-
-      - name: Build with Gradle Wrapper
-        uses: gradle/actions/setup-gradle@v3 # هذا هو الـ Action الجديد والموثوق
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          arguments: assembleDebug # نمرر له المهمة التي نريد تشغيلها
+          java-version: '17'
+          distribution: 'temurin'
+
+      # هذه هي الخطوة الحاسمة التي تصلح المشكلة
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug # سنستخدم الأمر المباشر الذي نعرف أنه يعمل
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
