--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Manus Agent APK (Absolute Solution)
+name: Build Manus Agent APK (Final Solution)
 
 on:
   push:
@@ -10,30 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. تنزيل الكود الخاص بك
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    # 2. إعداد بيئة Java
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          # لقد قمنا بتعطيل ذاكرة التخزين المؤقت بشكل صريح
+          cache: 'none'
 
-    # 3. تثبيت إصدار Gradle الصحيح والمحدد
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: '8.6'
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: '8.6'
+          # وتعطيلها هنا أيضًا لضمان عدم التداخل
+          cache-disabled: true
 
-    # 4. بناء التطبيق
-    - name: Build with Gradle
-      run: gradle assembleDebug
+      - name: Build with Gradle
+        run: gradle assembleDebug
 
-    # 5. رفع ملف APK
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: manus-agent-apk
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: manus-agent-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
