--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,8 +3,8 @@ workflows:
     name: Build Android APK
     instance_type: mac_mini_m1
     environment:
-      android_sdk_version: "34"
-      java_version: "17"
+      groups:
+        - android-sdk # هذه هي الطريقة الصحيحة لتضمين أدوات أندرويد
     scripts:
       - name: Build debug APK
         script: |
