--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,8 +4,11 @@ workflows:
     instance_type: mac_mini_m1
     environment:
       groups:
-        - android-sdk # هذه هي الطريقة الصحيحة لتضمين أدوات أندرويد
+        - android-sdk
     scripts:
+      - name: Grant execute permission for gradlew
+        script: | 
+          chmod +x ./gradlew
       - name: Build debug APK
         script: |
           ./gradlew assembleDebug
