--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build Manus Agent APK (Final Solution)
+name: Build Manus Agent APK
 
 on:
   push:
@@ -10,29 +10,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    # 1. تنزيل الكود الخاص بك (مع الـ Wrapper السليم)
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          # لقد قمنا بتعطيل ذاكرة التخزين المؤقت بشكل صريح
-          cache: 'none'
+    # 2. إعداد بيئة Java بالطريقة الأكثر استقرارًا
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        # *** الإصلاح هنا: نستخدم 'zulu' بدلاً من 'temurin' ***
+        # 'zulu' هي توزيعة موثوقة جدًا ومدعومة دائمًا في GitHub Actions.
+        distribution: 'zulu'
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          gradle-version: '8.6'
-          # وتعطيلها هنا أيضًا لضمان عدم التداخل
-          cache-disabled: true
+    # 3. إعطاء إذن التنفيذ لـ gradlew (خطوة أمان ضرورية)
+    - name: Grant execute permission for gradlew
+      run: chmod +x ./gradlew
 
-      - name: Build with Gradle
-        run: gradle assembleDebug
+    # 4. بناء التطبيق
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: manus-agent-apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+    # 5. رفع ملف APK
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: manus-agent-apk
+        path: app/build/outputs/apk/debug/app-debug.apk
