--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,6 @@ on:
 
 jobs:
   build:
-    # *** الإصلاح الحاسم والنهائي هنا ***
-    # نحن نغير بيئة التشغيل من 'ubuntu-latest' إلى 'macos-latest'
-    # بيئة macOS تأتي مع أدوات بناء أندرويد مجهزة بشكل أفضل وأكثر استقرارًا.
     runs-on: macos-latest
 
     steps:
@@ -17,22 +14,28 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # 2. إعداد بيئة Java (لا حاجة لتحديد التوزيعة في macOS)
+    # 2. إعداد بيئة Java
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
-        distribution: 'temurin' # 'temurin' تعمل بشكل ممتاز على macOS
+        distribution: 'temurin'
 
-    # 3. إعطاء إذن التنفيذ لـ gradlew
+    # *** الإصلاح الحاسم هنا ***
+    # 3. إنشاء ملف local.properties وتحديد مسار الـ SDK
+    #    هذا يخبر المشروع بمكان العثور على كلاسات أندرويد الأساسية.
+    - name: Create local.properties
+      run: echo "sdk.dir=$ANDROID_HOME" > local.properties
+
+    # 4. إعطاء إذن التنفيذ لـ gradlew
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
 
-    # 4. بناء التطبيق
+    # 5. بناء التطبيق
     - name: Build with Gradle
       run: ./gradlew assembleDebug
 
-    # 5. رفع ملف APK
+    # 6. رفع ملف APK
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
