--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,31 +7,30 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    # استخدام ubuntu-latest كما هو موصى به
+    runs-on: ubuntu-latest
 
     steps:
-    # 1. تنزيل الكود
     - name: Checkout code
       uses: actions/checkout@v4
 
-    # 2. إعداد بيئة Java
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    # 3. إعطاء إذن التنفيذ لـ gradlew
+    # إضافة خطوة إعداد Android SDK الحاسمة لضمان بيئة بناء سليمة
+    - name: Set up Android SDK
+      uses: android-actions/setup-android@v3
+
     - name: Grant execute permission for gradlew
       run: chmod +x ./gradlew
 
-    # *** الإصلاح الحاسم هنا: استخدام الأمر الصحيح للبناء النظيف ***
-    # --rerun-tasks: يجبر Gradle على إعادة تشغيل جميع المهام.
-    # --refresh-dependencies: يجبر Gradle على إعادة تنزيل جميع المكتبات.
-    - name: Build with Gradle (Force Clean Build)
-      run: ./gradlew clean build --rerun-tasks --refresh-dependencies
+    # استخدام أمر بناء قياسي ونظيف
+    - name: Build with Gradle
+      run: ./gradlew assembleDebug
 
-    # 5. رفع ملف APK
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
