--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- الأذونات الأساسية -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
 
     <application
@@ -14,9 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ManusAgent"
         tools:targetApi="31">
+
+        <!-- تعريف الـ Activity الرئيسي -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:theme="@style/Theme.ManusAgent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,10 +28,11 @@
             </intent-filter>
         </activity>
 
+        <!-- تعريف خدمة الوصولية -->
         <service
             android:name=".ManusAccessibilityService"
             android:exported="false"
-            android:label="@string/accessibility_service_label"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
